k8s/ollama/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ollama-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /ollama
      - /ollama/
